--- a/testCache.ipynb
+++ b/testCache.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'_id': '6616b7c377fa1afa40052503', 'cantidadEncuestados': 27316, 'respuestasA_uno': 26, 'respuestasB_uno': 200, 'respuestasC_uno': 1000, 'repuestasD_uno': 26090}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import redis\n",
     "from pymongo import MongoClient\n",
@@ -63,7 +55,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.2 (v3.12.2:6abddd9f6a, Feb  6 2024, 17:02:06) [Clang 13.0.0 (clang-1300.0.29.30)]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
   }
  },
  "nbformat": 4,
